Add tests (#6)
* Added testing libraries (junit 5, assertj, restassert, testcontainers, mockito).
* Removed unused method.
* Using string template.
* Refactored to make it easier to test.
* Fixed invalid sum reporting for Prometheus histograms.
* Test and fixes.
* Removed unused method.
* Updated datadog dashboard.
* Using picocli provided stdoutput (for easier testing).
* Small refactors to make things more testeable.
* Tests.
* Added awaitiity.
* Ignoring all Idea generated files.
* Added test workflow.